--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
