--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,2 +1,2 @@
-DATABASE=mongodb+srv://ABCDE:ABCDE@firstcluster.9ja0abi.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://ABCDE:ABCDE@firstcluster.9ja0abi.mongodb.net/Heritage-craft-connect?retryWrites=true&w=majority
 PORT=3000
