--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "cors": "^2.8.5",
+    "firebase": "^10.7.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.1",
     "react": "^18.2.0",
